Enhance announcement form and detail view with new features. Added landmarks selection, improved commission handling, and updated UI elements for better user experience. Implemented AJAX functionality for adding announcements to collections and added modals for collection management. Updated styles for buttons and forms for consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .env.neon
 .env.prod
 .env.test
+
 # Database
 *.sqlite3
 *.db
@@ -12,6 +13,10 @@
 # Media files
 /media/
 /mediafiles/
+
+# Specific media directories
+/media/announcement_photos/
+/media/user_photos/
 
 # Static files (collected)
 /staticfiles/
